Fixes vertical alignment of `atoms-link`

--- a/scss/emory-libraries/patterns/20-atoms/link/_structure.scss
+++ b/scss/emory-libraries/patterns/20-atoms/link/_structure.scss
@@ -8,7 +8,8 @@
 %atoms-link {
   
   // Builds the link structure.
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
   text-decoration: none;
   cursor: pointer;
   
